Grid system integrated. Fixed heigh scale error on mobile devices

--- a/src/style.css
+++ b/src/style.css
@@ -7,13 +7,14 @@ body {
 	padding: 0;
 	width: 100%;
 	height: 100%;
-	overflow: hidden;
+	/* overflow: hidden; */
 	background-color: #333;
 	color: white;
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
 	align-items: center;
+	font-size: larger;
 }
 
 h2 {
@@ -21,34 +22,15 @@ h2 {
 }
 
 input {
-	font-size: larger;
 	cursor: pointer;
 }
 
 #root {
 	width: 100%;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-	flex: 1;
-}
-
-.settings {
-	width: 100%;
-	display: flex;
-	flex: 1;
-	flex-direction: column;
-	justify-content: space-around;
-	align-items: center;
-	padding: 1rem 0;
-	background-color: #555;
-	border-top-left-radius: 1rem;
-	border-top-right-radius: 1rem;
-}
-
-.settings > *:not(:first-child) {
-	margin-top: 1rem;
+	height: 100%;
+	display: grid;
+	grid-template-columns: auto;
+	grid-template-rows: 75% auto;
 }
 
 .canvasContainer {
@@ -61,33 +43,27 @@ canvas {
 	height: auto;
 }
 
-.row {
-	width: 100%;
-	display: flex;
-	flex-direction: row;
-	justify-content: space-around;
-	align-items: center;
-}
-
-.row > *:not(:first-child) {
-	margin-left: 2rem;
-}
-
-.row > * {
-	display: flex;
-	flex-direction: row;
-	justify-content: center;
-	align-items: center;
-	font-size: 1rem;
-}
-
 label {
 	margin-right: 0.5rem;
-	font-size: larger;
+	font-size: x-large;
+}
+
+.settings {
+	width: 100%;
+	display: grid;
+	grid-template-areas:
+		"buttons"
+		"sliders"
+		"checkboxes";
+	align-items: center;
+	background-color: #555;
+	border-top-left-radius: 1rem;
+	border-top-right-radius: 1rem;
 }
 
 .buttons {
 	display: flex;
+	grid-area: buttons;
 	flex-direction: row;
 	align-items: center;
 	justify-content: center;
@@ -97,9 +73,80 @@ label {
 	margin-left: 1rem;
 }
 
-.button {
-	height: 2rem;
+.sliders {
+	grid-area: sliders;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	height: fit-content;
+}
+
+.sliders > div:not(:first-child) {
+	margin-top: 1rem;
+}
+
+.sliders > div {
+	width: 90%;
+	display: grid;
+	grid-template-columns: 1fr 10fr 1fr;
+	grid-template-areas:
+		"label slider value"
+		"label slider value";
+	align-items: center;
+	justify-content: center;
+}
+
+.sliders > div > label {
+	grid-area: label;
+	font-size: larger;
+	margin-right: 0.5rem;
+}
+
+.sliderValue {
+	grid-area: value;
+	font-size: larger;
+	margin-left: 0.5rem;
+	text-align: right;
+}
+
+input[type="range"] {
+	grid-area: slider;
+	width: 100%;
+}
+
+.checkboxes {
+	grid-area: checkboxes;
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: space-around;
+}
+
+.checkboxes > div {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: space-around;
+}
+
+input[type="checkbox"] {
+	appearance: none;
+	-webkit-appearance: none;
 	width: 2rem;
+	height: 2rem;
+	background-color: ivory;
+	border-radius: 50%;
+	transition: box-shadow 0.3s;
+}
+
+input[type="checkbox"]:checked {
+	box-shadow: inset 0 0 0 20px tomato;
+}
+
+.button {
+	height: 3rem;
+	width: 3rem;
 }
 
 .button:hover {
